# API-workshop

./: main.py  pyproject.toml  test_main.py  testes.py
.github/workflows/: mail.yml
app/: data.py  main.py  schema.py
tests/: test_main.py
