[tool.poetry]
name = "api-workshop"
version = "0.1.0"
description = ""
authors = ["Jorge Luiz da Silva <jlsilva01@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"
taskipy = "^1.12.2"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "uvicorn main:app --reload"
test = "pytest -v test_main.py"